# misc-tools

./: .gitignore  AUTHOR  README  TODO
c++/cairo_examble/: README  TODO
c++/findserver/: srverfind.cpp
c++/imdboid/: CMakeLists.txt  Messages.sh  README  imdboid.cpp  imdboid.h  imdbqueryengine.cpp  imdbqueryengine.h  plasma-applet-imdboid.desktop
csharp/GenericSignalsAndSlots/: AssemblyInfo.cs  GenericSignalsAndSlots.mdp  GenericSignalsAndSlots.mds  Main.cs  README  app.desktop
csharp/SharpInjection/: Makefile.am  SharpInjection.sln  autogen.sh  configure.ac
csharp/slots/: AssemblyInfo.cs  Main.cs  README  Window.cs  app.desktop  slots.mdp  slots.mds
lisp/: mocp.el
lua/ssh-brute/: ssh-brute.nse
misc/debian-preseed-scripts/: commandline.txt  server-base.cfg
misc/doc/: how_to_reset_brocade_fc_switch
misc/lirc/: moovida  vlc  xbmc
misc/lirc-hauppauge/: lircd.conf.hauppauge
misc/moovida/: README  moovida.hid  moovida.kcf
misc/network/: default.xml  interfaces
misc/virt/: README.md
perl/: id3rename
perl/bluetooth/: sendfile.pl
perl/csv/: csv_builder.pl
perl/getalp/: getalp.pl
perl/nsc2nagios/: NSC.ini  host.tpl  nrpe2service.pl  nsc2service.pl  service.tpl
perl/table_example/: def_pass_wlan.pl  dpl.html
perl/test_twig/: twig_test.pl
sh/JARGON/: JARGON
sh/alarm/: alarm.sh
sh/brace_exp/: brace_exp.sh
sh/buildtools/: README  btraceview.sh  cbuild.sh  debiandependend.sh  debiandevdepend.sh  packages.txt
sh/canoni250/: install-i250-drivers.sh
sh/color_shell/: colorPrompt.sh
sh/comic/: comic.sh
sh/genicon/: .directory  (+1 more)
(+71 files in other folders)
